add name sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,22 +18,22 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <a href="index.html" class="header-logo link"> <span class="header-logo">Web</span>Studio</a>
-            <nav class="header-nav">
-                <ul class="header-list list">
-                    <li class="header-element"><a href="index.html" class="header-link  link">Студія</a> </li>
-                    <li class="header-element"><a href="portfolio.html" class="header-link header-link-active link"><div class="active-liner"></div>Портфоліо</a></li>
-                    <li class="header-element"><a href="" class="header-link link">Контакти</a></li>
+            <a href="index.html" class="logo link"> <span class="logo">Web</span>Studio</a>
+            <nav class="navigation">
+                <ul class="navigation__list list">
+                    <li class="navigation__element"><a href="index.html" class="navigation__link  link">Студія</a> </li>
+                    <li class="navigation__element"><a href="portfolio.html" class="navigation__link navigation__link-active link"><div class="navigation__active-liner"></div>Портфоліо</a></li>
+                    <li class="navigation__element"><a href="" class="navigation__link link">Контакти</a></li>
                 </ul>
             </nav>
             <ul class="contacts-list list">
-                <li class="contacts-element"><a href="mailto:info@devstudio.com" class="header-mail link">
-                        <svg class="contacts-icon envelope">
+                <li class="contacts-list__element"><a href="mailto:info@devstudio.com" class="contacts-list__mail link">
+                        <svg class="contacts-list__icon envelope">
                             <use href="./img/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a>
                 </li>
-                <li class="contacts-element"><a href="tel:+380961111111" class="header-tel link">
-                        <svg class="contacts-icon smartphone">
+                <li class="contacts-list__element"><a href="tel:+380961111111" class="contacts-list__tel link">
+                        <svg class="contacts-list__icon smartphone">
                             <use href="./img/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a>
                 </li>
