--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,12 @@
             </nav>
             <ul class="contacts-list list">
                 <li class="contacts-list__element"><a href="mailto:info@devstudio.com" class="contacts-list__mail link">
-                        <svg class="contacts-list__icon envelope">
+                        <svg class="contacts-list__icon contacts-list__envelope">
                             <use href="./img/symbol-defs.svg#icon-envelope"></use>
                         </svg>info@devstudio.com</a>
                 </li>
                 <li class="contacts-list__element"><a href="tel:+380961111111" class="contacts-list__tel link">
-                        <svg class="contacts-list__icon smartphone">
+                        <svg class="contacts-list__icon contacts-list__smartphone">
                             <use href="./img/symbol-defs.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11</a>
                 </li>
